# scikit-visualizations

./: .buildinfo  .travis.yml  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_static/: index.doctree  skvisualizations.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/skvisualizations/: scores.html  validation.html
_sources/: index.rst.txt
_sources/_static/: index.rst.txt
_static/: Makefile  conf.py  index.html  make.bat  skvisualizations.html  skvisualizations.rst
docs/: Makefile  api.rst  conf.py  index.rst  modules.rst  skvisualizations.rst
example/: experiments.ipynb
skvisualizations/: __init__.py  scores.py  validation.py
tests/: test_scores.py  test_validation.py
